--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   firebase_core: ^0.2.5
   cloud_firestore: ^0.8.2
   firebase_auth: ^0.6.6
+  material_design_icons_flutter: ^3.0.3289
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
