added navigation bar and profile page

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,5 +41,15 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+    <string>I need your location</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>I need your location always</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>I need your location always</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>I need your location always</string>
+	<key>io.flutter.embedded_views_preview</key>
+	<true/>
 </dict>
 </plist>
