--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   cloud_firestore: ^0.8.2
   firebase_auth: ^0.6.6
   material_design_icons_flutter: ^3.0.3289
+  location: ^1.4.1
+  google_maps_flutter: ^0.0.3+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
