--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   material_design_icons_flutter: ^3.0.3289
   location: ^1.4.1
   google_maps_flutter: ^0.0.3+3
+  fluttertoast: ^2.1.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
