--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   location: ^1.4.1
   google_maps_flutter: ^0.0.3+3
   fluttertoast: ^2.1.3
+  shared_preferences: ^0.4.3
+  cached_network_image: ^0.5.1
+  image_picker: ^0.4.10
+  firebase_storage: ^1.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
